# simplebot

./: README.md
simplebot_description/: CMakeLists.txt  package.xml
simplebot_description/config/: cafe.world  controller.yaml  dynamic_conf.yaml  slam_viz.rviz  viz.rviz
simplebot_description/dae/: base_board.dae  motor.dae  wheel.dae
simplebot_description/launch/: simplebot.launch  simplebot.launch.py  simplebot_cafe.launch  simplebot_cafe_gmapping.launch  simplebot_gazebo_diff_control.launch.py  simplebot_ros2_control.launch.py
simplebot_description/rviz/: viz.rviz
simplebot_description/urdf/: diff_control.xacro  lidar.xacro  robot_core.xacro  robot_ros2_control.xacro  simplebot.urdf  simplebot_gazebo.urdf.xacro  simplebot_ros2_control.urdf.xacro
simplebot_hardware/: 86-udev.rules  CMakeLists.txt  package.xml  udev_installer.sh
simplebot_hardware/config/: HardwareParameter.cfg  controller.yaml  hardware_param.yaml
simplebot_hardware/launch/: hardware_bringup.launch  hw.launch  jetson_bringup.launch
simplebot_hardware/src/: simplebot_driver.cpp  simplebot_hardware.cpp  simplebot_hardware_node.cpp
simplebot_navigation/: CMakeLists.txt  package.xml
simplebot_navigation/launch/: amcl.launch  move_base.launch  simplebot_navigation.launch
simplebot_navigation/param/: amcl_dynamic_conf.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
simplebot_navigation/rviz/: simplebot_navigation.rviz
(+2 files in other folders)
