<?xml version="1.0"?>
<package format="2">
  <name>simplebot_description</name>
  <version>0.0.1</version>
  <description>The simplebot_description</description>

  <license>MIT</license>

  <author email="yukimakura86@gmail.com">yukimakura</author>
  <maintainer email="yukimakura86@gmail.com">yukimakura</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <export>

  </export>
</package>
